# ai-image-forensics-comparison

./: .dockerignore  .gitattributes  .gitignore  CITATION.cff  README.md  pyproject.toml  references.bib  requirements-gpu-cu128.txt  requirements.txt
configs/: cifake.yaml  datasets.json
reports/: ai_vs_real_2026_benchmark.md  anonymous_review_bundle_2026_06_15.md  anonymous_review_bundle_package_2026_06_15.md  calibration_diagnostics_2026_06_12.md  calibration_operating_modes_2026_06_14.md  chatgpt_gemini_deepfake_2026_probe.md  cifake_subset_initial.md  claim_evidence_matrix_lint_2026_06_14.md  clip_dino_encoder_support_2026_06_13.md  clip_vit_b32_foundation_and_fusion_2026_06_13.md  combined_v4_full_transfer_summary_2026_06_13.md  combined_v4_medium_selectk_probe_2026_06_12.md  combined_v4_probe_2026_06_12.md  combined_v4_selectk_probe_2026_06_12.md  combined_v4_source_slice_diagnostics_2026_06_13.md  combined_v4_transfer_readiness_2026_06_13.md  competition_submission_dry_run_2026_06_15.md  conventional_v2_probe.md  cross_dataset_2026_generalization.md  dataset_triage_2026_06_12.md  dff_manuscript_draft_2026_06_14.md  dfrws_poster_brief_2026_06_13.md  dfrws_poster_candidate_export_2026_06_15.md  dfrws_poster_draft_2026_06_13.md  dfrws_poster_draft_v2_2026_06_13.md  dfrws_poster_native_figures_2026_06_13.md  dfrws_poster_package_lint_2026_06_14.md  dfrws_qualitative_grid_selection_2026_06_14.md  dinov2_frozen_encoder_smoke_2026_06_13.md  dinov2_three_seed_foundation_baseline_2026_06_13.md  external_benchmark_claim_lint_2026_06_14.md  freuid_challenge_2026_setup.md  (+124 more)
(+546 files in other folders)
