[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-image-forensics-comparison"
version = "0.1.0"
description = "Compare a neural network and photometric normal-consistency baseline for real-vs-generated image detection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Arnav" }]
dependencies = [
  "joblib>=1.3",
  "kaggle>=1.6",
  "huggingface_hub>=0.24",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "pillow>=10.0",
  "scikit-learn>=1.4",
  "torch>=2.4",
  "torchvision>=0.19",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
